src/objects/Partner_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number_Formula__c</fullName>
        <formula>Account_Parent_Record__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account_Parent_Record__r.Owner.FirstName  &amp; &quot; &quot; &amp;  Account_Parent_Record__r.Owner.LastName</formula>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Parent_Record__c</fullName>
        <label>Account Parent Record</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Profiles</relationshipLabel>
        <relationshipName>Partners4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Partner_Profiles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Company_Websites__c</fullName>
        <label>Additional Company Websites</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Management__c</fullName>
        <label>Asset Management %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Auction_or_3rd_Party_Marketplaces__c</fullName>
        <inlineHelpText>If you advertise/promote Zebra product on any public auction site or third-party marketplaces,  indicate which sites. (select all that apply)</inlineHelpText>
        <label>Auction or 3rd Party Marketplaces</label>
        <picklist>
            <picklistValues>
                <fullName>Amazon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonanza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craigslist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ebay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecrater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newegg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oodle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overstock.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricegrabber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rakuten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sears</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wal-Mart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo Shopping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Auto_ID_POS_ID_HW_or_complementary_sw__c</fullName>
        <label>Auto ID/POS/ID HW or complementary sw%</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BARCODE_PRINTER_REVENUE_TOTAL__c</fullName>
        <description>Displays the percentage sum total for barcode printers sold revenue</description>
        <formula>(IF(ISBLANK(Zebra__c ), 0, 1) + 
IF(ISBLANK(Datamax_O_Neil__c), 0,1) + 
  IF(ISBLANK(Intermec_Honeywell__c), 0, 1) + 
   IF(ISBLANK(Printronix__c), 0, 1) +
    IF(ISBLANK(SATO__c), 0, 1) +
     IF(ISBLANK(Toshiba_TEC__c ), 0, 1) +
      IF(ISBLANK(Other_Printer_Sales__c ), 0, 1)) / 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BARCODE PRINTER REVENUE TOTAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Barcode_Printer_Revenue__c</fullName>
        <label>Barcode and/or Card Printer Revenue %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Blue_Star__c</fullName>
        <label>Blue Star %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Business_Model__c</fullName>
        <label>Business Model</label>
        <picklist>
            <picklistValues>
                <fullName>Application partner / Developer Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier / Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Services Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Tailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internet Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network / System Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Added Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Service Provider</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_MIX_TOTAL__c</fullName>
        <description>This is the total percentage sum of the customer mix fields</description>
        <formula>(IF(ISBLANK(End_User_Customer_Mix__c), 0, 1) + 
IF(ISBLANK(OEMs_Customer_Mix__c), 0,1) + 
  IF(ISBLANK(Other_Customer_Mix__c), 0, 1) + 
      IF(ISBLANK(Resellers_Customer_Mix__c), 0, 1)) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CUSTOMER MIX TOTAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Card_ID_HW_or_complementary_software__c</fullName>
        <label>Card/ID HW or complementary software %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Citizen__c</fullName>
        <label>Citizen %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud_Based_Solutions_Revenue__c</fullName>
        <label>Cloud-Based Solutions Revenue %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cloud_Business_Models__c</fullName>
        <inlineHelpText>Please indicate if you offer any of the following cloud business models.</inlineHelpText>
        <label>Cloud Business Models</label>
        <picklist>
            <picklistValues>
                <fullName>Infrastructure as a Service (IaaS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform as a Service (PaaS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software as a Service (SaaS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Company_Description__c</fullName>
        <label>Company Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Develops_Software_Firmware__c</fullName>
        <label>Company Develops Software/Firmware</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Geographical_Coverage_Areas__c</fullName>
        <inlineHelpText>Identify your company&apos;s geographical coverage areas by state/providence and country through field sales efforts only (excludes web, catalog, and inside sales)</inlineHelpText>
        <label>Company Geographical Coverage Areas</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_ID__c</fullName>
        <formula>Company_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Id_Type__c</fullName>
        <label>Company ID Type</label>
        <picklist>
            <picklistValues>
                <fullName>Tax Registration ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAT Registration ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Legal_Name__c</fullName>
        <label>Company Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name_Lookup_Formula__c</fullName>
        <formula>Company_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name Lookup Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name_Potential_Partner__c</fullName>
        <description>Potential Partner Company Name</description>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Profiles</relationshipLabel>
        <relationshipName>Partners4_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Tax_Registration_ID__c</fullName>
        <label>Company ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Trading_Name__c</fullName>
        <label>Company DBA/Trading Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Website__c</fullName>
        <label>Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Compliance_Labeling__c</fullName>
        <label>Compliance Labeling %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Consumer_Goods__c</fullName>
        <inlineHelpText>Consumer Goods is focused on consumer products, electronics, and textiles (not retail or manufacturing).</inlineHelpText>
        <label>Consumer Goods %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Custom_Software_Offering__c</fullName>
        <inlineHelpText>If Custom Software as % of application sw is &gt;0, describe custom software offering</inlineHelpText>
        <label>Custom Software Offering</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Software_as_of_application_sw__c</fullName>
        <label>Custom Software as % of application sw</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DIS_Matica__c</fullName>
        <label>DIS/Matica %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DataCard__c</fullName>
        <label>DataCard %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Datamax_O_Neil__c</fullName>
        <label>Datamax-O&apos;Neil %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Describe_Other_Customer_Mix__c</fullName>
        <inlineHelpText>If Other Customer Mix % is &gt; 0, describe what else makes up your customer mix.</inlineHelpText>
        <label>Describe Other Customer Mix %</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_Other_Printer_Sales_Pct__c</fullName>
        <label>Describe Other Printer Sales %</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_Other_Printer_Sales__c</fullName>
        <inlineHelpText>If Other Printer Sales % is &gt; 0, describe what other printer brands you sell.</inlineHelpText>
        <label>Describe Other Printer Sales</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_Other_Revenue_Activities__c</fullName>
        <inlineHelpText>If Other Revenue Activities % is &gt; 0, describe what other activities exist.</inlineHelpText>
        <label>Describe Other Revenue Activities %</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_Other_Revenue_Sources_Pct__c</fullName>
        <label>Describe Other Revenue Sources %</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_Other_Revenue_Sources__c</fullName>
        <inlineHelpText>If Other Revenue Sources % is &gt; 0, describe what other revenue sources you have.</inlineHelpText>
        <label>Describe Other Revenue Sources</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_Other_Vertical_Markets__c</fullName>
        <label>Describe Other Vertical Markets</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Records_Management__c</fullName>
        <label>Document &amp; Records Management %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EMS_WMS_Integration__c</fullName>
        <label>EMS/WMS Integration %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <inlineHelpText>Please indicate total employees at the company. In the other fields, please specify the dedicated full-time employees for each role.</inlineHelpText>
        <label>Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_User_Customer_Mix__c</fullName>
        <label>End User Customer Mix %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Epson__c</fullName>
        <label>Epson %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evolis__c</fullName>
        <label>Evolis %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Fargo__c</fullName>
        <label>Fargo %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Field_Sales__c</fullName>
        <label>Field Sales %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Financial_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Government__c</fullName>
        <inlineHelpText>Includes Federal, State &amp; Local, Education, and Public Administration &amp; Safety.</inlineHelpText>
        <label>Government %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HQ_Address__c</fullName>
        <inlineHelpText>Indicate your company headquarter&apos;s mailing address.</inlineHelpText>
        <label>HQ Address</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handle_in_house__c</fullName>
        <label>Handle in-house %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hardware_Revenue__c</fullName>
        <label>Hardware Revenue %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Healthcare__c</fullName>
        <label>Healthcare %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>In_house_Professional_Services__c</fullName>
        <label>In-house Professional Services %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>In_house_Software_Program_Developers__c</fullName>
        <label># In-house Software Program/Developers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_house_dev_as_of_custom_offering__c</fullName>
        <label>In-house dev as % of custom offering</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Indicate_Other_Applications__c</fullName>
        <inlineHelpText>If Other Applications % is &gt; 0, indicate other applications that make up total revenue.</inlineHelpText>
        <label>Indicate Other Applications</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_Labels__c</fullName>
        <label>Information Labels %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Information_enclosed_herein_is_accurate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Information enclosed herein is accurate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ingram_Nimax__c</fullName>
        <label>Ingram/Nimax %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inside_Sales_Reps__c</fullName>
        <label># Inside Sales Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intermec_Honeywell__c</fullName>
        <label>Intermec/Honeywell %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Internet_Total_Revenue__c</fullName>
        <label>Internet Total Revenue %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inventory_Management__c</fullName>
        <label>Inventory Management %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Invoice_Receipt_Printing_Receipts__c</fullName>
        <label>Invoice/Receipt Printing/ Receipts %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Kiosk_or_complementary_software__c</fullName>
        <label>Kiosk or complementary software %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Magicard__c</fullName>
        <label>Magicard %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Manufacturing__c</fullName>
        <label>Manufacturing %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Marketing_Resources__c</fullName>
        <label># Marketing Resources</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobility__c</fullName>
        <label>Mobility %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_printer_existing_application__c</fullName>
        <label>New printer/existing application %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_printer_new_application__c</fullName>
        <label>New printer/new application %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OEMs_Customer_Mix__c</fullName>
        <label>OEMs Customer Mix %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OTS_software_brand_name__c</fullName>
        <inlineHelpText>If Off-the-shelf software % is &gt; 0, provide OTS software brand name</inlineHelpText>
        <label>OTS software brand name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_the_shelf_OTS_sw_as_of_applic_sw__c</fullName>
        <label>Off-the-shelf (OTS) sw as % of applic sw</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>On_boarding_reject_reason__c</fullName>
        <description>This field will populate the email sent to the prospect when an on-boarding profile is rejected.</description>
        <inlineHelpText>This field will populate the email sent to the prospect when an on-boarding profile is rejected.</inlineHelpText>
        <label>On-boarding reject reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Online_Sales__c</fullName>
        <label>Online Sales %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Operating_Systems__c</fullName>
        <label>Operating Systems</label>
        <picklist>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac OS/X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Browser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows CE/Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Ordering_Order_Entry_Fulfillment__c</fullName>
        <label>Ordering, Order Entry/Fulfillment %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Applications__c</fullName>
        <label>Other Applications %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Auction_or_3rd_Party_Marketplaces__c</fullName>
        <inlineHelpText>If you selected other for Auction or 3rd Party Marketplaces, please describe.</inlineHelpText>
        <label>Other Auction or 3rd Party Marketplaces</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Cloud_Business_Models__c</fullName>
        <inlineHelpText>If you selected other for Cloud Business Models, please describe.</inlineHelpText>
        <label>Other Cloud Business Models</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Customer_Mix__c</fullName>
        <label>Other Customer Mix %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Distributor_Define__c</fullName>
        <inlineHelpText>If Other Distributor % is &gt; 0, indicate distributor names.</inlineHelpText>
        <label>Other Distributor</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Distributor__c</fullName>
        <label>Other Distributor %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Operating_System__c</fullName>
        <label>Other Operating System</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Platform__c</fullName>
        <label>Other Platform</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Printer_Sales__c</fullName>
        <label>Other Printer Sales %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Professional_Services__c</fullName>
        <inlineHelpText>If you selected other for professional services, please describe.</inlineHelpText>
        <label>Other Professional Services</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Programming_Language__c</fullName>
        <label>Other Programming Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Revenue_Activities__c</fullName>
        <label>Other Revenue Activities %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Revenue_Sources__c</fullName>
        <label>Other Revenue Sources %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Technology_Offerings__c</fullName>
        <inlineHelpText>If you selected other for Technology Offerings, please describe.</inlineHelpText>
        <label>Other Technology Offerings</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Vertical_Market__c</fullName>
        <label>Other Vertical Market %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Vertical_Markets__c</fullName>
        <inlineHelpText>If other vertical markets % &gt; 0, indicate those vertical markets.</inlineHelpText>
        <label>Other Vertical Markets</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outside_Field_Sales_Reps__c</fullName>
        <label># Outside/Field Sales Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outside_Field_Sales_Total_Revenue__c</fullName>
        <label>Outside/Field Sales Total Revenue %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Outsourced_dev_as_of_custom_offering__c</fullName>
        <label>Outsourced dev as % of custom offering</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Outsourcing_Company_Name__c</fullName>
        <inlineHelpText>If Outsourced development &gt;0, provide outsourcing company name.</inlineHelpText>
        <label>Outsourcing Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Program_Name__c</fullName>
        <label>PF Program Name</label>
        <picklist>
            <picklistValues>
                <fullName>Technology Solutions Architect Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Solutions Architect Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIDC Technology Specialist Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIDC Technology Specialist Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIDC Technology Specialist Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadline Technology Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print &amp; Apply Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Service Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Reseller Premier Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Reseller Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Reseller Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Card Reseller Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Specialist Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Specialist Advanced</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PF_Program_Type__c</fullName>
        <label>PF Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>Application Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PREVIOUS_YEARS_REVENUE_TOTAL__c</fullName>
        <description>This is the percentage sum for previous year&apos;s barcode printers are sales</description>
        <formula>(IF(ISBLANK(Replacement_of_existing_printer__c), 0, 1) + 
IF(ISBLANK(Upgrade_of_existing_printer__c), 0,1) + 
 IF(ISBLANK(New_printer_existing_application__c), 0, 1) + 
 IF(ISBLANK(New_printer_new_application__c), 0, 1)) / 4</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PREVIOUS YEARS REVENUE TOTAL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <label>Parent Account</label>
        <length>110</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_First_ID__c</fullName>
        <description>ID from Siebel associated with Partner&apos;s First Account ID</description>
        <label>Partner First ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Locator_Permisson_Granted__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Partner Locator Permisson Granted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Program_Membership__c</fullName>
        <description>This field allows us to pull the Partner Program Membership object into the Partner Profile section.</description>
        <label>Partner Program Membership</label>
        <referenceTo>Partner_Program_Membership__c</referenceTo>
        <relationshipLabel>Partner Profiles</relationshipLabel>
        <relationshipName>Partner_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>